# butter2sos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bandpass_script.m  butter2sos.c  butter2sos.jl  butter2sos.m  butter2sos_design.c  butter2sos_design.h  butter2sos_mex.c  butterband.c  butterband.m  butterband_mex.c  mkversion.cmake  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
butter2sos.jl/: LICENSE  Project.toml  README.md
butter2sos.jl/src/: butter2sos.jl
butter2sos.jl/test/: runtests.jl
ci/: copy_lib.sh  run_tests.sh
core/lib/: BUILD  butter2sos_design.c  butter2sos_design.h  design.def  design.lds
core/main/: BUILD  butterband.c
include/: butter2sos.c  butter2sos_design.c
julia/: butter2sos.jl
lib/: BUILD.bazel  CMakeLists.txt  butter2sos_design.c  version.h  version.h.in
matlab/: butter2sos.m
mex/: butter2sos_mex.c  butterband_mex.c
programs/: CMakeLists.txt  butter2sos.c  butterband.c
python/: butter2sos.py
python/pybutter/: pyproject.toml  setup.cfg  setup.py
python/pybutter/src/: core.py
python/pybutter/src/pybutter/: __init__.py  core.py
python/pybutter/test/: test_core.py
rust/rsbutter/: Cargo.toml
rust/rsbutter/src/: main.rs
scripts/: copy_lib.bat  copy_lib.sh  pip_install.sh  run_tests.sh
src/pybutter/: __init__.py  core.py
test/: test_core.py
