cc_shared_library(
    name = "butterlib",
    shared_lib_name = "butterlib.dll",
    deps = [":design"],
    win_def_file = "design.def"
)

cc_library(
    name = "design",
    srcs = ["butter2sos_design.c", "version.h"],
    hdrs = ["butter2sos_design.h", "version.h"],
    visibility = ["//programs:__pkg__"],
)