[isort]
profile = black
skip =
    ./build,
    .git,

[metadata]
license_file = ../LICENSE.md
name = pybutter
license = MIT
author = Jordan Smith
description = A Python API into the C-Butter code.

[options]
packages = find:
package_dir = src
python_requires = >= 3.7
include_package_data = True # scoop up the DLL

[options.packages.find]
where = src

[flake8]
max-line-length = 88
exclude =
    ./build,
    .git,
    __pycache__
extend-ignore = E203